--- a/index.html
+++ b/index.html
@@ -2,22 +2,33 @@
 <html>
   <head>
     <title>Javascript StopWatch</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
   </head>
+  <link rel="stylesheet" href="style.css" />
   <body>
     <div class="container">
-      <h1>STOPWATCH</h1>
-      <h1></h1>
-      <h1>VANLLIA JAVSCRIPT STOPWATCH</h1>
-      <span class="minute2">0</span>
-      <span class="minute1">0</span>
-      :
-      <span class="second2">0</span>
-      <span class="second1">0</span>
+      <div class="text-container">
+        <h1>STOPWATCH</h1>
+        <h1>VANLLIA JAVSCRIPT STOPWATCH</h1>
+      </div>
+      <div class="countdown-container">
+        <span class="minute2 timer">0</span>
+        <span class="minute1 timer">0</span>
+        <span class="colon timer">:</span>
+        <span class="second2 timer">0</span>
+        <span class="second1 timer">0</span>
+      </div>
       <div class="btn-container">
         <button class="btn">Start</button>
         <button class="btn">Stop</button>
         <button class="btn">Reset</button>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
