--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <h1>VANLLIA JAVSCRIPT STOPWATCH</h1>
       </div>
       <div class="countdown-container">
-        <span class="minute2 timer">0</span>
-        <span class="minute1 timer">0</span>
-        <span class="colon timer">:</span>
-        <span class="second2 timer">0</span>
-        <span class="second1 timer">0</span>
+        <span class="timer" id="minute2 ">0</span>
+        <span class="timer" id="minute1 ">0</span>
+        <span class="timer" id="colon">:</span>
+        <span class="timer" id="second2 ">0</span>
+        <span class="timer" id="second1">0</span>
       </div>
       <div class="btn-container">
         <button class="btn">Start</button>
