--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <h1>VANLLIA JAVSCRIPT STOPWATCH</h1>
       </div>
       <div class="countdown-container">
-        <span class="timer" id="minute2 ">0</span>
-        <span class="timer" id="minute1 ">0</span>
+        <span class="timer" id="minute2">0</span>
+        <span class="timer" id="minute1">0</span>
         <span class="timer" id="colon">:</span>
-        <span class="timer" id="second2 ">0</span>
+        <span class="timer" id="second2">0</span>
         <span class="timer" id="second1">0</span>
       </div>
       <div class="btn-container">
-        <button class="btn">Start</button>
-        <button class="btn">Stop</button>
-        <button class="btn">Reset</button>
+        <button class="btn" id="start-btn">Start</button>
+        <button class="btn" id="stop-btn">Stop</button>
+        <button class="btn" id="reset-btn">Reset</button>
       </div>
     </div>
     <script src="script.js"></script>
