--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
         <h1>VANLLIA JAVSCRIPT STOPWATCH</h1>
       </div>
       <div class="countdown-container">
-        <span class="timer" id="minute2">0</span>
-        <span class="timer" id="minute1">0</span>
+        <span class="timer" id="minute">0</span>
         <span class="timer" id="colon">:</span>
-        <span class="timer" id="second2">0</span>
-        <span class="timer" id="second1">0</span>
+        <span class="timer" id="second">0</span>
       </div>
       <div class="btn-container">
         <button class="btn" id="start-btn">Start</button>
